fixed drag and drop, post z-indexing

--- a/src/app/_todo.scss
+++ b/src/app/_todo.scss
@@ -41,7 +41,9 @@ ul {
     }
   }
   
-
+  &:hover {
+	  cursor: pointer;
+  }
 }
 
 .post-title {
